--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,7 +6,7 @@ body{color:#333;
     padding:0
 }
 #cabecera
-{background:#33a;
+{background:palevioletred;
     box-shadow:0 2px 20px 0 rgba(0,0,0,.5);
     color:#fff;
     font-weight:700;
